# geometric-spectroscopy

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  MANUSCRIPT_LICENSE.txt  README.md  pyproject.toml  requirements-dev.txt
artifacts/order_stability/: delta_by_order.csv  freq_by_order.csv  jacobian_normalized.csv  jacobian_pade_vs_raw.csv  jacobian_svd_by_order.csv  jacobian_vs_L.csv  lcurve_corner.csv  lcurve_points_with_curvature.csv  monte_carlo_noise.csv  tikhonov_scan.csv
examples/: all_metrics_demo.py  bardeen_demo.py  hayward_demo.py  model_demo.py  report_bundle.py  simpson_visser_demo.py  stability_monitor.py
src/geometric_spectroscopy/: __init__.py  _cli_utils.py  angular_couplings.py  cli_all_metrics.py  cli_demo.py  cli_report_bundle.py  cli_stability_monitor.py  detector_forecast.py  high_order_derivatives.py  jacobian.py  monte_carlo.py  pade.py  potentials.py  qnm_wkb.py  resonances.py  second_order.py  stability.py  truncation.py
tests/: test_all_metrics_demo_runs.py  test_basic.py  test_conditioning.py  test_high_order_derivatives.py  test_imports.py  test_jacobian_determinism_and_shape.py  test_model_demo_smoke.py  test_monte_carlo.py  test_pade.py  test_peak_derivatives_contract.py  test_rank.py  test_regularization.py  test_repro.py  test_reproducibility.py  test_smoke_order6_models.py  test_stability_scan_smoke.py  test_wkb6_sanity.py  test_wkb6_schwarzschild.py  test_wkb6_schwarzschild_grav.py  test_wkb6_smoke_contract.py
tools/: detector_table.py  jacobian_L_scan_dense.py  jacobian_normalized.py  jacobian_pade_vs_raw.py  jacobian_vs_L.py  lcurve_corner.py  mode_sweep.py  monte_carlo_noise.py  order_stability_export.py  plot_all_figures.py  repro_check.py  tikhonov_scan.py
workflows/: ci.yml
