[build-system]
requires = [
  "setuptools>=77",
  "wheel",
  "tomli>=2; python_version < '3.11'",
]
build-backend = "setuptools.build_meta"


[project]
name = "geometric-spectroscopy"
version = "0.1.0"
description = "Geometric Spectroscopy: spectral inversion and stability diagnostics for geometric reconstruction."
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Aleksey Buyanov", email = "pppuuu7@gmail.com" },
]

keywords = [
  "geometric spectroscopy",
  "quasinormal modes",
  "spectral inversion",
  "stability diagnostics",
  "black hole physics",
  "mathematical physics",
  "inverse problems",
  "geometric reconstruction",
]

# SPDX / PEP 639 style. Для закрытой/своей лицензии — LicenseRef-*
license = "LicenseRef-Proprietary"

# ВАЖНО: указываем реально существующие файлы.
# LICENSE — лицензия на код; MANUSCRIPT_LICENSE.txt — лицензия на статью/манускрипт.
license-files = [
  "LICENSE",
  "MANUSCRIPT_LICENSE.txt",
]

dependencies = [
  "numpy>=1.23,<3",
  "scipy>=1.10,<2",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Repository = "https://github.com/pppuu7-cmd/geometric-spectroscopy"
Issues = "https://github.com/pppuu7-cmd/geometric-spectroscopy/issues"

[project.scripts]
gs-demo = "geometric_spectroscopy.cli_demo:main"
gs-stability-monitor = "geometric_spectroscopy.cli_stability_monitor:main"
gs-report-bundle = "geometric_spectroscopy.cli_report_bundle:main"
gs-all-metrics = "geometric_spectroscopy.cli_all_metrics:main"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "build",
  "twine",
]


[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "examples*", "tools*", "paper*", "workflows*"]


[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-q"